# ballista

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: check-license.yml  python_bindings.yml  rust.yml
benchmarks/tpch/: Cargo.toml  README.md  tpch-gen.sh
benchmarks/tpch/src/: main.rs
dev/: build-all.sh  build-rust-base.sh  build-rust.sh  bump-version.sh  download-nyctaxi-files.sh  integration-tests.sh  publish-docker-images.sh  publish-rust.sh
dev/ci/: check-asl-header.py
docker/: rust-base.dockerfile  rust.dockerfile
docs/: README.md  architecture.md  dev-env-jvm.md  dev-env-rust.md  integration-testing.md  query-execution.md  release-process.md
docs/user-guide/: README.md  deploy.sh
docs/user-guide/src/: SUMMARY.md  client-python.md  client-rust.md  clients.md  configuration.md  deployment.md  development-environment.md  docker-compose.md  execute-query-rust.md  faq.md  integration-testing.md  introduction.md  jvm-query-engine.md  kubernetes.md  local-mode.md  reference.md  release-process.md  rust-query-engine.md  spark-executor.md  standalone.md
integration-tests/: README.md
integration-tests/rust/src/: main.rs
jvm/: README.md  pom.xml
jvm/jdbc/: pom.xml
jvm/jdbc/src/main/java/org/ballistacompute/jdbc/: FlightStatement.java
python/: .gitignore  Cargo.toml  Makefile.toml  README.md  pyproject.toml
python/ballista/: __init__.py  __init__.pyi
python/ci/: check_stub_exhaustiveness.py
python/examples/: build.sh  dev_requirements.txt  requirements.txt  testquery.py
python/examples/.ipynb_checkpoints/: TestQuery-checkpoint.ipynb  Untitled-checkpoint.ipynb
python/src/: context.rs  dataframe.rs  datatypes.rs  dfschema.rs  error.rs  expression.rs  field.rs  functions.rs  lib.rs  partition.rs  scalar.rs  schema.rs  util.rs
python/tests/: __init__.py  test_dataframe.py  test_schema.py  test_simple.py
python/tests/support/test_data/: test_table_1.csv
rust/: Cargo.toml
rust/ballista/: Cargo.toml  README.md  build.rs
rust/ballista/examples/: client.rs  planner.rs
rust/ballista/proto/: ballista.proto
rust/ballista/src/: client.rs  columnar_batch.rs  context.rs  error.rs  executor.rs  flight_service.rs  lib.rs  prelude.rs  test_utils.rs  utils.rs
rust/ballista/src/distributed/: scheduler.rs
rust/ballista/src/execution/: mod.rs  planner.rs  query_stage.rs  shuffle_reader.rs
rust/ballista/src/executor/: collect.rs  flight_service.rs  mod.rs  query_stage.rs  shuffle_reader.rs
rust/ballista/src/scheduler/: etcd.rs  k8s.rs  mod.rs  planner.rs  standalone.rs
rust/ballista/src/scheduler/execution_plans/: mod.rs  query_stage.rs  shuffle_reader.rs  unresolved_shuffle.rs
rust/ballista/src/scheduler/state/: etcd.rs  mod.rs  standalone.rs
rust/ballista/src/serde/: mod.rs
rust/ballista/src/serde/logical_plan/: from_proto.rs  mod.rs  to_proto.rs
rust/ballista/src/serde/physical_plan/: from_proto.rs  mod.rs  to_proto.rs
rust/ballista/src/serde/scheduler/: from_proto.rs  mod.rs  to_proto.rs
rust/benchmarks/tpch/: Cargo.toml  README.md  docker-compose.yaml  run.sh  tpch-gen.sh
rust/benchmarks/tpch/src/: main.rs
rust/client/: Cargo.toml
rust/core/: Cargo.toml
rust/core/proto/: ballista.proto
rust/core/src/: client.rs  utils.rs
rust/core/src/serde/logical_plan/: from_proto.rs  to_proto.rs
rust/core/src/serde/physical_plan/: from_proto.rs  to_proto.rs
rust/core/src/serde/scheduler/: from_proto.rs  mod.rs  to_proto.rs
rust/examples/distributed-query/src/: main.rs
rust/executor/: Cargo.toml  README.md
rust/executor/src/: execution_loop.rs  flight_service.rs  main.rs
rust/lib/: Cargo.toml  README.md
rust/lib/proto/: ballista.proto
rust/lib/src/: columnar_batch.rs  error.rs  utils.rs
rust/lib/src/executor/: flight_service.rs  mod.rs
rust/lib/src/scheduler/: mod.rs  planner.rs
rust/lib/src/scheduler/execution_plans/: unresolved_shuffle.rs
rust/lib/src/scheduler/state/: mod.rs  standalone.rs
rust/lib/src/serde/logical_plan/: to_proto.rs
rust/lib/src/serde/physical_plan/: from_proto.rs  to_proto.rs
rust/lib/src/serde/scheduler/: mod.rs  to_proto.rs
rust/scheduler/: Cargo.toml  README.md
rust/scheduler/src/: lib.rs  main.rs  planner.rs
rust/scheduler/src/state/: mod.rs
spark/benchmarks/: README.md  pom.xml
spark/benchmarks/src/main/scala/org/ballistacompute/spark/benchmarks/: Main.scala
