[package]
name = "tpch"
version = "0.4.0-SNAPSHOT"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"

[dependencies]
ballista = { path="../../rust/ballista" }

arrow = { git = "https://github.com/apache/arrow", rev="f05b49b" }
arrow-flight = { git = "https://github.com/apache/arrow", rev="f05b49b" }
datafusion = { git = "https://github.com/apache/arrow", rev="f05b49b" }
parquet = { git = "https://github.com/apache/arrow", rev="f05b49b" }

env_logger = "0.8"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
structopt = "0.3"
