[package]
name = "ballista"
description = "Ballista Distributed Compute"
license = "Apache-2.0"
version = "0.4.0-SNAPSHOT"
homepage = "https://github.com/ballista-compute/ballista"
repository = "https://github.com/ballista-compute/ballista"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"
build = "build.rs"
include = ["build.rs", "src/**/*", "Cargo.toml", "proto/ballista.proto"]

[features]
simd = ["datafusion/simd"]
snmalloc = ["snmalloc-rs"]

[dependencies]
anyhow = "1"
async-trait = "0.1.36"
clap = "2"
crossbeam = "0.7"
env_logger = "0.8"
etcd-client = "0.6"
futures = "0.3"
k8s-openapi = { version = "0.8.0", features = ["v1_13"] }
kube = "0.35"
log = "0.4"
prost = "0.7"
prost-types = "0.7"
serde = "1"
serde_json = "1"
sled = "0.34"
snmalloc-rs = {version = "0.2", features= ["cache-friendly"], optional = true}
sqlparser = "0.7"
structopt = "0.3"
tempfile = "3"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tonic = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
arrow = { git = "https://github.com/apache/arrow", rev="c3b972c" }
arrow-flight = { git = "https://github.com/apache/arrow", rev="c3b972c" }
datafusion = { git = "https://github.com/apache/arrow", rev="c3b972c" }


[dev-dependencies]

[build-dependencies]
tonic-build = { version = "0.4" }
#, features = ["prost", "transport"], default-features = false }

[[bin]]
name = "executor"
path = "src/bin/executor.rs"
