[package]
name = "ballista-scheduler"
description = "Ballista Distributed Compute - Scheduler"
license = "Apache-2.0"
version = "0.4.2-SNAPSHOT"
homepage = "https://github.com/ballista-compute/ballista"
repository = "https://github.com/ballista-compute/ballista"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"
include = ["src/**/*", "Cargo.toml"]

[dependencies]
anyhow = "1"
ballista = { path = "../lib" }
configure_me = "0.4.0"
env_logger = "0.8"
etcd-client = "0.6"
log = "0.4"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
tonic = "0.4"

[dev-dependencies]

[build-dependencies]
configure_me_codegen = "0.4.0"

[package.metadata.configure_me.bin]
scheduler = "scheduler_config_spec.toml"
